edit index registration

--- a/registration.html
+++ b/registration.html
@@ -7,12 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/registration.css">
+    <link rel="stylesheet" href="css/registration.css">
     <title>Hidden | Registration</title>
 </head>
 
 <body>
-<<<<<<< HEAD
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-sm-8 col-md-4 col-lg-4 col-xl-4 log_in">
@@ -51,8 +50,6 @@
             </div>
         </div>
     </div>
-        
-=======
     <form id="log_in">
         <label for="nickname">nickname</label>
         <input type="text" id="nickname" name="nickname">
@@ -75,12 +72,10 @@
         <br>
         <button type="submit">Send</button>
     </form>
-
->>>>>>> 703962a7f9cc6628ea05eaf9d16da365a2041cfd
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="./js/registration.js" type="text/javascript"></script>
+    <script src="js/registration.js" type="text/javascript"></script>
 </body>
 
 </html>
