--- a/bhagaskara/index.html
+++ b/bhagaskara/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Bhagaskara.</title>
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles/media.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 </head>
 
@@ -19,18 +20,12 @@
 fermentum fringilla.</h2>
             </header>
             <div class="navbar_images">
-                <div>
-                    <a href="" class="navbar_images_about">About</a>
+                <a href="" class="navbar_images_about">About</a>
                 <a href="" class="navbar_images_team">Team</a>
-                </div>
-                <div>
-                    <a href="" class="navbar_images_services">Services</a>
+                <a href="" class="navbar_images_services">Services</a>
                 <a href="" class="navbar_images_portfolio active">Porfolio</a>
-                </div>
-                <div>
-                    <a href="" class="navbar_images_blog">Blog</a>
+                <a href="" class="navbar_images_blog">Blog</a>
                 <a href="" class="navbar_images_contact">Contact</a>
-                </div>
         	</div>
             <a href="" class="arrow_buttom_icon"></a>
         </div>
@@ -285,7 +280,8 @@ fermentum fringilla.</h2>
     			<div class="form">
     				<input type="text" placeholder="Your Name">
     				<input type="text" placeholder="Your Email">
-    				<textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+    				<textarea  placeholder="Your Message"></textarea>
+                    <button><span>Send email</span></button>
     			</div>
     			<div class="address_informations">
     				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
@@ -299,7 +295,7 @@ fermentum fringilla.</h2>
     				</div>
     			</div>
             </div> 
-			<button><span>Send email</span></button>
+			
 		</div>
     </section>
     <footer>
