--- a/piroll/contact.html
+++ b/piroll/contact.html
@@ -18,21 +18,20 @@
             <a href="index.html" class="navbar-brand d-flex align-items-center">
                 <img src="images/logo.png" alt="logo">
             </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fa fa-bars navbar-toggler-icon"></i>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="nav navbar-nav mr-autojustify-content-end menu">
-                <li><a href="index.html">home</a></li>
-                <li><a href="about.html">about</a></li>
-                <li><a href="index.html#work">work</a></li>
-                <li><a href="index.html#process">process</a></li>
-                <li><a href="index.html#services">services</a></li>
-                <li><a href="index.html#testimonials">testimonials</a></li>
-                <li><a href="contact.html" class="active">contact</a></li>
-            </ul>
-          </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fa fa-bars navbar-toggler-icon"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+                <ul class="nav navbar-nav mr-autojustify-content-end menu">
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="about.html">about</a></li>
+                    <li><a href="index.html#work">work</a></li>
+                    <li><a href="index.html#process">process</a></li>
+                    <li><a href="index.html#services">services</a></li>
+                    <li><a href="index.html#testimonials">testimonials</a></li>
+                    <li><a href="contact.html" class="active">contact</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
     <section class="contact">
@@ -40,74 +39,42 @@
             <div class="row">
                 <div class="col-lg-5">
                     <h1>Contact Info</h1>
-                    <p class="contact-info">To give give beginning divide, cattle. Give moving 
-                        won't, there the abundantly she'd she'd brought air 
-                        upon. Light hath subdue. Life days creature upon 
+                    <p class="contact-info">To give give beginning divide, cattle. Give moving
+                        won't, there the abundantly she'd she'd brought air
+                        upon. Light hath subdue. Life days creature upon
                         first heaven gathering dry.</p>
-                    <p><b>Address:</b>  10111 Santa Monica Boulevard, LA</p>
-                    <p><b>Phone:</b>  +44 987 065 908</p>
-                    <p><b>Email:</b>  info@Example.com</p>
-                    <p><b>Fax:</b>  +44 987 065 909</p>
+                    <p><b>Address:</b> 10111 Santa Monica Boulevard, LA</p>
+                    <p><b>Phone:</b> +44 987 065 908</p>
+                    <p><b>Email:</b> info@Example.com</p>
+                    <p><b>Fax:</b> +44 987 065 909</p>
                 </div>
                 <div class="col-lg-7">
                     <form class="form-message">
-                <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-                            <input 
-                            value="sasha" 
-                            type="text"
-                            id="user-name"
-                            class="form-control" 
-                            placeholder="Your Name"
-                            pattern="^[a-zA-Z]{1,20}$"
-                            title="Podaj poprawnie imie"
-                            required>
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <input type="text" id="user-name" class="form-control" placeholder="Your Name" pattern="^[a-zA-Z]{1,20}$" title="Podaj poprawnie imie" required>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-group">
+                                    <input type="email" id="user-email" class="form-control" placeholder="Your Email" title="Podaj poprawnie email" required>
+                                </div>
+                            </div>
                         </div>
-
-                    </div>
-                    <div class="col">
                         <div class="form-group">
-                            <input 
-                            value="sasha@vsdv" 
-                            type="email" 
-                            id="user-email"
-                            class="form-control" 
-                            placeholder="Your Email" 
-                            title="Podaj poprawnie email"
-                            required>
+                            <input type="text" id="user-title" class="form-control" placeholder="Your Title" pattern="[a-zA-Z0-9 ]+" title="Podaj poprawny title" required>
                         </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <input 
-                    value="title sdvsvdv" 
-                    type="text"
-                    id="user-title"
-                    class="form-control" 
-                    placeholder="Your Title" 
-                    pattern="[a-zA-Z0-9 ]+"
-                    title="Podaj poprawny title"
-                    required>
-                </div>
-                <div class="form-group">
-                    <textarea 
-                    class="form-control" 
-                    rows="3" 
-                    id="user-text"
-                    placeholder="Your Comment" 
-                    maxlength = "1000"
-                    title="Nie więcej 5-1000 symboli"
-                    required>sasha sa  sdds vsd vsd vsd v sdv sdv sdv dsv sdv </textarea>
-                </div>
-                <button type="submit" onclick="setData()">send message</button>
-            </form>
+                        <div class="form-group">
+                            <textarea class="form-control" rows="3" id="user-text" placeholder="Your Comment" maxlength="1000" title="Nie więcej 5-1000 symboli" required></textarea>
+                        </div>
+                        <button type="submit" onclick="setData()">send message</button>
+                    </form>
                 </div>
             </div>
             <div id="map-container-google-2" class="z-depth-1-half map-container maps">
-              <iframe src="https://maps.google.com/maps?q=chicago&t=&z=13&ie=UTF8&iwloc=&output=embed" allowfullscreen></iframe>
+                <iframe src="https://maps.google.com/maps?q=chicago&t=&z=13&ie=UTF8&iwloc=&output=embed" allowfullscreen></iframe>
             </div>
-
         </div>
     </section>
     <footer>
